--- a/css/page.css
+++ b/css/page.css
@@ -1953,7 +1953,8 @@ select {
           cursor: pointer;
       }
       #page button.active{
-          background-color: rgb(80, 80, 80);
+          /* background-color: rgb(80, 80, 80); */
+          background-color: red;
       }
 
       #event{
