--- a/css/page.css
+++ b/css/page.css
@@ -1299,7 +1299,7 @@ select {
       }
       #page button{
           width: 15px;
-          height: 15px;
+          height: 1px;
           border-radius: 50%;
           border: none;
           margin: 5px;
@@ -1837,9 +1837,7 @@ select {
     .m-snb-title img{
         width: 12px;
         height: 12px;
-    
-        position: fixed;
-        right: 30%;
+        padding-right: 15px;
       
     }
     .m-sub-snb{
@@ -1953,8 +1951,7 @@ select {
           cursor: pointer;
       }
       #page button.active{
-          /* background-color: rgb(80, 80, 80); */
-          background-color: red;
+          background-color: rgb(80, 80, 80);
       }
 
       #event{
